--- a/jt/jt_manage/src/main/webapp/easy-ui/easyui-5-window.html
+++ b/jt/jt_manage/src/main/webapp/easy-ui/easyui-5-window.html
@@ -19,7 +19,7 @@
 		$("#btn1").bind("click",function(){
 			
 			$("#win1").window({
-				title:"弹出框",
+				title:"弹出框AAAAAA",
 				width:400,
 				height:400,
 				modal:true   //这是一个模式窗口，只能点击弹出框，不允许点击别处
